# smp

./: .env  .gitignore  Cargo.toml  STRUCTURE.md
.smp/: identity.json  prekeys.json  signed_prekey.json
crates/smp-cli/: Cargo.toml
crates/smp-cli/src/: main.rs  reliability.rs  session_store.rs  storage.rs
crates/smp-crypto-core/: Cargo.toml
crates/smp-crypto-core/src/: encryption.rs  error.rs  handshake.rs  identity.rs  lib.rs  prekey.rs  ratchet.rs
crates/smp-discovery/: Cargo.toml
crates/smp-protocol/: Cargo.toml
crates/smp-protocol/src/: error.rs  lib.rs  packet.rs
crates/smp-registry/: Cargo.toml
crates/smp-relay/: Cargo.toml
crates/smp-relay/src/: main.rs
crates/smp-trust/: Cargo.toml
infra/: docker-compose.yml
