[package]
name = "smp-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }

smp-crypto-core = { path = "../smp-crypto-core" }
smp-protocol = { path = "../smp-protocol" }
