[package]
name = "smp-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
rand = "0.8"

x25519-dalek = "2"
ed25519-dalek = "2"

smp-crypto-core = { path = "../smp-crypto-core" }
smp-protocol = { path = "../smp-protocol" }
