[package]
name = "smp-crypto-core"
version = "0.1.0"
edition = "2021"

[dependencies]
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom", "serde"] }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
thiserror = "1.0"
zeroize = "1.7"
serde = { version = "1.0", features = ["derive"] }
