[package]
name = "smp-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros"] }
smp-protocol = { path = "../smp-protocol" }
smp-crypto-core = { path = "../smp-crypto-core" }
bytes = "1"
